[package]
name = "wal"
version = "0.1.0"
edition = "2024"

[dependencies]
transaction.workspace = true
anyhow = "1.0.100"
bincode.workspace = true
bytes = "1"
crc32fast = "1.5.0"
crossbeam-skiplist = "0.1.3"
parking_lot = "0.12.5"
serde.workspace = true
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio.workspace = true
kanal = "0.1.1"
